--- a/HTML-CSS/index.html
+++ b/HTML-CSS/index.html
@@ -25,7 +25,7 @@
     <main>
         <section class="home">
             <div class="home-content">
-                <img src="../Images/Profile Photo.png" alt="Image">
+                <img src="/Images/Profile-Photo.jpg" alt="Image">
                 <h1>Hi There! I'm Chaitanya Teja</h1>
                 <h3>Aspiring Full Stack Web Developer | 1st-Year B.Tech CSE Student</h3>
                 <p> A passionate and ambitious 1st-year Computer Science Engineering student with a strong interest in full stack web development. I enjoy building practical and impactful solutions, including campus apps and startup ideas that help students connect and collaborate. I was also part of a team that won the TechXcelerate Hackathon 2024 at the national level with our project 'DOCODE'. I'm continuously learning and working towards becoming a skilled full stack developer.</p>
@@ -36,7 +36,7 @@
                     <a href="https://www.instagram.com/p_mohana_chaitanya_teja_5907/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                 </div>
                 <div class="resume">
-                    <a class="downloadBtn" href="../Sample Resume.pdf" download="resume.pdf">Download My Resume</a>
+                    <a class="downloadBtn" href="/Resume/Sample Resume.pdf" download="resume.pdf">Download My Resume</a>
                 </div>
             </div>
         </section>
