--- a/HTML-CSS/swot.html
+++ b/HTML-CSS/swot.html
@@ -10,18 +10,17 @@
 </head>
 <body>
     <header>
-        <a href="/HTML CSS/index.html" class="logo">
+        <a href="/HTML-CSS/index.html" class="logo">
             <div class="name-graphic">
                 <h1>.Shiva</h1>
             </div>
         </a>
         <nav>
-            <a href="index.html">Home</a>
-            <!-- <a href="services.html">Services</a> -->
-            <a href="skills.html">Skills</a>
-            <a href="education.html">Education</a>
-            <a href="experience.html">Experience</a>
-            <a href="swot.html" class="active">SWOT</a>
+            <a href="/HTML-CSS/index.html">Home</a>
+            <a href="/HTML-CSS/skills.html">Skills</a>
+            <a href="/HTML-CSS/education.html">Education</a>
+            <a href="/HTML-CSS/experience.html">Experience</a>
+            <a href="/HTML-CSS/swot.html" class="active">SWOT</a>
         </nav>
     </header>
 
