--- a/HTML-CSS/swot.html
+++ b/HTML-CSS/swot.html
@@ -10,13 +10,13 @@
 </head>
 <body>
     <header>
-        <a href="/HTML-CSS/index.html" class="logo">
+        <a href="/HTML-CSS/Index/index.html" class="logo">
             <div class="name-graphic">
                 <h1>.Shiva</h1>
             </div>
         </a>
         <nav>
-            <a href="/HTML-CSS/index.html">Home</a>
+            <a href="/HTML-CSS/Index/index.html">Home</a>
             <a href="/HTML-CSS/skills.html">Skills</a>
             <a href="/HTML-CSS/education.html">Education</a>
             <a href="/HTML-CSS/experience.html">Experience</a>
