--- a/HTML-CSS/Index/index.html
+++ b/HTML-CSS/Index/index.html
@@ -5,27 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio Website</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link rel="stylesheet" href="/HTML-CSS/index.css">
+    <link rel="stylesheet" href="../index.css"> <!-- changed -->
 </head>
 <body>
     <header>
-        <a href="/HTML-CSS/Index/index.html" class="logo">
+        <a href="index.html" class="logo"> <!-- changed -->
             <div class="name-graphic">
                 <h1>.Shiva</h1>
             </div>
         </a>
         <nav>
-            <a href="/HTML-CSS/Index/index.html" class="active">Home</a>
-            <a href="/HTML-CSS/skills.html">Skills</a>
-            <a href="/HTML-CSS/education.html">Education</a>
-            <a href="/HTML-CSS/experience.html">Experience</a>
-            <a href="/HTML-CSS/swot.html">SWOT</a>
+            <a href="index.html" class="active">Home</a> <!-- changed -->
+            <a href="../skills.html">Skills</a> <!-- changed -->
+            <a href="../education.html">Education</a> <!-- changed -->
+            <a href="../experience.html">Experience</a> <!-- changed -->
+            <a href="../swot.html">SWOT</a> <!-- changed -->
         </nav>
     </header>
     <main>
         <section class="home">
             <div class="home-content">
-                <img src="/Images/Profile-Photo.jpg" alt="Image">
+                <img src="../../Images/Profile-Photo.jpg" alt="Image"> <!-- changed -->
                 <h1>Hi There! I'm Chaitanya Teja</h1>
                 <h3>Aspiring Full Stack Web Developer | 1st-Year B.Tech CSE Student</h3>
                 <p> A passionate and ambitious 1st-year Computer Science Engineering student with a strong interest in full stack web development. I enjoy building practical and impactful solutions, including campus apps and startup ideas that help students connect and collaborate. I was also part of a team that won the TechXcelerate Hackathon 2024 at the national level with our project 'DOCODE'. I'm continuously learning and working towards becoming a skilled full stack developer.</p>
@@ -36,7 +36,7 @@
                     <a href="https://www.instagram.com/p_mohana_chaitanya_teja_5907/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                 </div>
                 <div class="resume">
-                    <a class="downloadBtn" href="/Resume/Sample Resume.pdf" download="resume.pdf">Download My Resume</a>
+                    <a class="downloadBtn" href="../../Resume/Sample Resume.pdf" download="resume.pdf">Download My Resume</a> <!-- changed -->
                 </div>
             </div>
         </section>
