--- a/HTML-CSS/index.html
+++ b/HTML-CSS/index.html
@@ -5,21 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio Website</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link rel="stylesheet" href="../index.css"> <!-- changed -->
+    <link rel="stylesheet" href="/HTML-CSS/index.css">
 </head>
 <body>
     <header>
-        <a href="index.html" class="logo"> <!-- changed -->
+        <a href="/HTML-CSS/index.html" class="logo">
             <div class="name-graphic">
                 <h1>.Shiva</h1>
             </div>
         </a>
         <nav>
-            <a href="index.html" class="active">Home</a> <!-- changed -->
-            <a href="../skills.html">Skills</a> <!-- changed -->
-            <a href="../education.html">Education</a> <!-- changed -->
-            <a href="../experience.html">Experience</a> <!-- changed -->
-            <a href="../swot.html">SWOT</a> <!-- changed -->
+            <a href="/HTML-CSS/index.html" class="active">Home</a>
+            <a href="/HTML-CSS/skills.html">Skills</a>
+            <a href="/HTML-CSS/education.html">Education</a>
+            <a href="/HTML-CSS/experience.html">Experience</a>
+            <a href="/HTML-CSS/swot.html">SWOT</a>
         </nav>
     </header>
     <main>
